# discord-bridge

./: .gitignore  .gitmodules  AGENTS.md  README.ko.md  README.md  package.json  requirements.txt
.agent/workflows/: agents.md
.caretrules/: project_context.md
bridge/: __init__.py  cli.py  config.py  emailer.py  llm.py  pipeline.py
bridge/providers/: __init__.py  google_provider.py  ollama_provider.py  openai_provider.py
docs/: ai-work-guide.md  architecture.ko.md  architecture.md  dev-principles.md  manual.ko.md  manual.md  next-session.md  plan.md  project_context.ko.md  release_plan.md  task_plan_init.md  tauri_ui_plan.md  workflow.md
frontend/: package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx
icons/: README.md  icon.icns
libs/: libjavascriptcoregtk-4.0.so.18  libwebkit2gtk-4.0.so.37
reports/: 💻-coders_2024-11-13.md
scripts/: bootstrap.sh  build_pyinstaller.py  build_tauri.sh  dev_tauri.sh  run_ollama.sh  run_tauri_dev.sh  setup_env.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
tests/: test_cli.py  test_config.py  test_emailer.py  test_pipeline.py  test_providers.py
