[package]
name = "discord-bridge-tauri"
version = "0.1.0"
authors = ["Discord Bridge <support@example.com>"]
edition = "2021"

[dependencies]
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "1.4", features = [ "shell-all", "fs-all" ] }

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
